--- a/app/views/characters/_new.html.erb
+++ b/app/views/characters/_new.html.erb
@@ -1,9 +1,10 @@
+
 <div class="new_character_box">
     New Character
     <%= form_for(character, remote: true) do |f| %>
     	<%= f.text_field(:name, placeholder: "Name", id:"new_character_name") %><br>
     	<%= f.text_area(:bio, placeholder: "Bio", id:"new_character_bio") %><br>
-        <div id="new_labels_container"> </div>
+        <div id="new_ability_labels_container">
         <%= f.label(:health) %> |
         <%= f.label(:strength) %> |
         <%= f.label(:dexterity) %> |
@@ -11,7 +12,9 @@
         <%= f.label(:intelligence) %> |
         <%= f.label(:wisdom) %> |
         <%= f.label(:charisma) %><br>
+        </div>
         <div id="new_abilities_container">
+        <div class="row_labels">Base:</div>
         <%= f.number_field(:health, step: 1, value: 0, class:"new_abilities_field") %>
         <%= f.number_field(:strength, step: 1, value: 0, class:"new_abilities_field") %>
         <%= f.number_field(:dexterity, step: 1, value: 0, class:"new_abilities_field") %>
@@ -19,6 +22,8 @@
         <%= f.number_field(:intelligence, step: 1, value: 0, class:"new_abilities_field") %>
         <%= f.number_field(:wisdom, step: 1, value: 0, class:"new_abilities_field") %>
         <%= f.number_field(:charisma, step: 1, value: 0, class:"new_abilities_field") %><br>
+        <span id="new_sigmas">
+        <div class="row_labels">σ:</div> 
         <%= f.number_field(:health_sigma, step: 1, value: 0, class:"new_abilities_field") %>
         <%= f.number_field(:strength_sigma, step: 1, value: 0, class:"new_abilities_field") %>
         <%= f.number_field(:dexterity_sigma, step: 1, value: 0, class:"new_abilities_field") %>
@@ -26,6 +31,10 @@
         <%= f.number_field(:intelligence_sigma, step: 1, value: 0, class:"new_abilities_field") %>
         <%= f.number_field(:wisdom_sigma, step: 1, value: 0, class:"new_abilities_field") %>
         <%= f.number_field(:charisma_sigma, step: 1, value: 0, class:"new_abilities_field") %><br>
+        </span>
+        </div>
+        <%= f.label "Unique?" %>
+        <%= f.check_box :unique, onclick:"toggleElements('#new_sigmas');" %> <br>
     	<%= f.submit("Create Character", id:"create_character_button") %>
     <% end %>
     <div id="how-to-cancel"> Click outside to cancel</div>
