--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -21,26 +21,14 @@ html, body {
     -webkit-box-shadow: $shadow;
 }
 
-@mixin blur($radius) {
-    -webkit-filter: blur($radius);
-    -moz-filter: blur($radius);
-    -o-filter: blur($radius);
-    -ms-filter: blur($radius);
-    filter: blur($radius);
-}
-
-@mixin saturate($amount) {
-    -webkit-filter: blur($amount);
-    -moz-filter: blur($amount);
-    -o-filter: blur($amount);
-    -ms-filter: blur($amount);
-    filter: blur($amount);
-}
-
 #container{	
 	position:absolute;
 	height:100%;
 	width:100%;
+}
+
+.bio {
+    height: 150px;
 }
 
 a:hover, a:visited, a:link, a:active
@@ -83,7 +71,7 @@ a:hover {
 }
 
 .edit-topbar:hover {
-	color:#ddd;
+    color:#ddd;
 }
 
 .plus {
@@ -156,33 +144,30 @@ a:hover {
 .edit ul.tags {
     padding: 0;
     margin: 0;
-}
 
-.edit ul.tags li {
-    list-style: none;
-    width: 100%;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    padding-top: 5px;
-    padding-left: 12px;
-    @include shadow(0 0 4px rgba(0, 0, 0, 0.2));
-    height: 30px;
-    @include borderbox;
-}
+    li {
+        list-style: none;
+        width: 100%;
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+        padding-top: 5px;
+        padding-left: 12px;
+        @include shadow(0 0 4px rgba(0, 0, 0, 0.2));
+        height: 30px;
+        @include borderbox;
+    }
+    li:first-of-type {
+        border-radius: 6px 6px 0 0;
+    } li:last-of-type {
+        border-radius: 0 0 6px 6px;
+    } li:only-of-type {
+        border-radius: 6px 6px 6px 6px;
+    }
 
-.edit ul.tags li:first-of-type {
-    border-radius: 6px 6px 0 0;
-}
-.edit ul.tags li:last-of-type {
-    border-radius: 0 0 6px 6px;
-}
-.edit ul.tags li:only-of-type {
-    border-radius: 6px 6px 6px 6px;
-}
-
-.edit ul.tags li.new {
-    padding-top: 3px;
-    height: 30px;
+    li.new {
+        padding-top: 3px;
+        height: 30px;
+    }
 }
 
 .abilities{
@@ -194,7 +179,6 @@ div.row_labels {
     width:40px;
     display:inline-block;
     text-align:left;
-
 }
 
 #abilities_container{
@@ -225,7 +209,6 @@ div.row_labels {
     color: white;
 }
 
-
 #new_abilities_container{
     margin-top:10px;
 }
@@ -240,7 +223,6 @@ div.row_labels {
     max-width:60px;
 }
 
-
 .background {
 	position:fixed;
     background: rgba(0, 0, 0, 0.5);
@@ -253,18 +235,6 @@ div.row_labels {
 input[type="text"]{
     padding: 0 6px;
 }
-
-// input[type="text"],
-// input[type="submit"],
-// button {
-//   height: 22px;
-//   background-color: #fff;
-//   border-radius: 8px;
-//   border: none;
-//   color:#000;
-//   text-decoration:none;
-//   @include borderbox;
-// }
 
 textarea {
     padding: 4px;
@@ -322,28 +292,6 @@ textarea#character_bio {
 #new-tag-content{
     display:none;
 }
-
-// input[type=text],
-// input[type="submit"],
-// input[type="button"],
-// button,
-// textarea {
-//   -webkit-transition: all 0.30s ease-in-out;
-//   -moz-transition: all 0.30s ease-in-out;
-//   -ms-transition: all 0.30s ease-in-out;
-//   -o-transition: all 0.30s ease-in-out;
-//   outline: none;
-//   border: 1px solid #fff;
-// }
- 
-// input[type=text]:focus,
-// input[type="submit"]:focus,
-// input[type="button"]:focus,
-// button:focus,
-// textarea:focus {
-//   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-//   border: 1px solid rgba(81, 203, 238, 1);
-// }
 
 #how-to-cancel {
     position:fixed;
