--- a/app/views/characters/_tags.html.erb
+++ b/app/views/characters/_tags.html.erb
@@ -1,4 +1,3 @@
-
 <script>
 $(document).ready(function(){
     if (<%= edit ? "true" : "false" %>){
@@ -8,19 +7,22 @@ $(document).ready(function(){
     }
 });
 </script>
+
+<% tag_structure = JSON.load(File.read(Rails.root.join("public", "tagdata.json"))) %>
+
 <ul class="tags">
 <% if character.tags.count != 0 %>
 
     <% character.tags.each do |t| %>
-    <li name="tag_<%= t.id %>" class="inline-tags"><%= t.key << ": " << t.value %>
-    <% if edit %>
-    <div class="edit-button inline-tags">
-    <%= link_to(edit_tag_path(t), remote: true) do %>
-    <span class="edit-link inline-tags">Edit</span>
-    </div>
-    <% end %>
-    <% end %>
-    </li>
+        <li name="tag_<%= t.id %>" class="inline-tags"><%= t.key + ": " + t.value %>
+        <% if edit %>
+            <div class="edit-button inline-tags">
+                <%= link_to(edit_tag_path(t), remote: true) do %>
+                <span class="edit-link inline-tags">Edit</span>
+            </div>
+            <% end %>
+        <% end %>
+        </li>
     <% end %>
 <% else %>
 
@@ -28,6 +30,19 @@ $(document).ready(function(){
 
 <% end %>
     <div id="new-tag-location"> </div>
+</ul>
+
+<ul class="tag-editors">
+<% tag_structure.keys.each do |tag| %>
+    <li>
+    <%= tag %>
+    <%= character.tags.select{|k| k.key == tag} %>
+    <%= form_for(tag, remote: true) do |t| %>
+        <%= t.select(:key, tag_structure[tag].keys.map{ |x| [x, x] }) %>
+        <%= t.submit %>
+    <% end %>
+    </li>
+<% end %>
 </ul>
 
 <div id="new-tag-content">
