--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -303,6 +303,23 @@ textarea#character_bio {
     color: #303030;
 }
 
+ul.tag-editors {
+    padding-left: 0px;
+    li {
+        padding: 8px;
+        margin-bottom: 8px;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 6px;
+        @include shadow(0 0 8px rgba(0, 0, 0, 0.3) inset, 0 0 2px rgba(255, 255, 255, 0.3));
+        list-style: none;
+        h1 {
+            margin-top: 0;
+            margin-bottom: 4px;
+            color: #222;
+        }
+    }
+}
+
 // Webkit hardware acceleration hack
 .background {
     -webkit-transform: translate3d(0, 0, 0);
