--- a/app/views/characters/destroy.js.erb
+++ b/app/views/characters/destroy.js.erb
@@ -1,1 +1,1 @@
-$(".list").html("<%= escape_javascript(render partial: 'list', locals: {characters: Character.all } )%>");
+$(".list").html("<%= escape_javascript(render partial: 'list', locals: {:characters => Character.all } )%>");
