--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -42,9 +42,21 @@ a:hover {
 	color:#6d7587;
 }
 
-.edit-link{
-	margin-left:10px;
-	font-size:10px;
+.edit-link {
+	margin-left: 3px;
+    margin-right: 3px;
+	font-size: 10px;
+}
+
+.delete-link {
+    background-color: rgba(0, 0, 0, 0.3);
+    padding-left: 3px;
+    padding-right: 3px;
+    border-radius: 50%;
+    font-size: 12px;
+}
+.delete-link:hover {
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .topbar {
@@ -325,6 +337,22 @@ ul.tag-editors {
 
         }
     }
+}
+
+.subtags {
+    display: inline;
+}
+.inline-subtag {
+    display: inline;
+    form {
+        display: inline;
+    }
+}
+li.inline-subtag:before {
+    content: "& ";
+}
+li.inline-subtag:first-child:before {
+    content: "";
 }
 
 // Webkit hardware acceleration hack
