--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -46,6 +46,7 @@ a:hover {
 	margin-left: 3px;
     margin-right: 3px;
 	font-size: 10px;
+    display: inline;
 }
 
 .delete-link {
@@ -259,8 +260,17 @@ textarea {
     margin:auto;
 }
 
-.inline-tags{
+.inline-tag{
     display:inline-block;
+    padding: 0 1px 0 1px;
+    margin-right: 1.5px;
+    margin-left: 1.5px;
+    border-radius: 4px;
+    background: rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    form {
+        display: inline;
+    }
 }
 
 #notice {
@@ -334,19 +344,13 @@ ul.tag-editors {
         list-style: none;
         padding-left: 4px;
         .tag {
-
+            padding-top: 4px;
         }
     }
 }
 
 .subtags {
     display: inline;
-}
-.inline-subtag {
-    display: inline;
-    form {
-        display: inline;
-    }
 }
 li.inline-subtag:before {
     content: "& ";
