--- a/app/views/characters/_tags.html.erb
+++ b/app/views/characters/_tags.html.erb
@@ -21,24 +21,25 @@ $(document).ready(function(){
         <ul>
         <% if category_tags.size != 0 %>
             <% category_tags.each do |this_tag| %>
-                <li name="tag_<%= this_tag.id %>" class="tag"><%= this_tag.key + ": " + this_tag.value %>
-                <% subtags = character.tags.select{|k| k.key == this_tag.value and k.depth == 1} %>
-                <% if edit %>
-                    <div class="edit-button inline-tags">
+                <li name="tag_<%= this_tag.id %>" class="tag">
+                <span class="inline-tag">
+                    <%= this_tag.key + ": " + this_tag.value %>
+                    <% subtags = character.tags.select{|k| k.key == this_tag.value and k.depth == 1} %>
+                    <% if edit %>
                         <%= link_to(edit_tag_path(this_tag), remote: true) do %>
-                            <span class="edit-link inline-tags">Edit</span>
+                            <span class="edit-link">Edit</span>
                         <% end %>
                         <% if subtags.count == 0 %>
-                            <%= link_to("×", tag_path(this_tag), remote: true, method: :delete, class: "delete-link inline-tags")%>
+                            <%= link_to("×", tag_path(this_tag), remote: true, method: :delete, class: "delete-link")%>
                         <% end %>
-                    </div>
-                <% end %>
+                    <% end %>
+                </span>
                 <ul class="subtags">
                 <% if subtags.count > 0 %>
                     &mdash; 
                     <% subtags.each do |subtag| %>
-                        <li name="tag_<%= this_tag.id %>" class="inline-subtag">
-                            <%= subtag.key + ": " + subtag.value %>
+                        <li name="tag_<%= this_tag.id %>" class="inline-tag">
+                            <%= subtag.value %>
                             <% if edit %>
                                 <%= link_to("×", tag_path(subtag), remote: true, method: :delete, class: "delete-link")%>
                             <% end %>
@@ -47,7 +48,7 @@ $(document).ready(function(){
                 <% end %>
                 <% if edit %>
                     <% if tag_structure[tag_string][this_tag.value].size > 0 %>
-                        <div class="inline-subtag">
+                        <div class="inline-tag">
                         <% sub_values = subtags.map{ |y| y.value } %>
                         <%= form_for(tag, remote: true) do |f| %>
                             <%= f.select(:value, tag_structure[tag_string][this_tag.value].select{ |x| not sub_values.include?(x) }.map{ |x| [x, x] }) %>
