--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -352,11 +352,11 @@ ul.tag-editors {
 .subtags {
     display: inline;
 }
-li.inline-subtag:before {
+li.inline-tag:before {
     content: "& ";
 }
-li.inline-subtag:first-child:before {
-    content: "";
+li.inline-tag:first-child:before {
+    content: none;
 }
 
 // Webkit hardware acceleration hack
