Creates automatic ability filling buttons. Fixes #38

--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -208,6 +208,16 @@ a:hover {
     font-size:15px;
 }
 
+#shuffle-button{
+    margin-left:80px;
+}
+#shuffle-button:hover{
+    color: #ddd;
+}
+#random-button:hover{
+    color: #ddd;
+}
+
 div.row_labels {
     width:40px;
     display:inline-block;
