--- a/app/views/characters/_edit_character_info.html.erb
+++ b/app/views/characters/_edit_character_info.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(character, remote: true) do |f| %>
     <%= f.text_field(:name, value: character.name) %><br>
     <%= f.text_area(:bio, value: character.bio) %><br>
-    <span id="shuffle-button" onclick="assignRandomByShuffle();"> Assign Shuffled Fixed Distribution </span> |
-    <span id="random-button" onclick="assignRandomByDice();"> Assign Random Distribution </span>
+    <span id="shuffle-button" onclick="assignRandomByShuffle(false);"> Assign Shuffled Fixed Distribution </span> |
+    <span id="random-button" onclick="assignRandomByDice(false);"> Assign Random Distribution </span>
     <div id="ability_labels_container">
         <%= f.label(:health) %> |
         <%= f.label(:strength) %> |
