Submit changes button is gone. Fixes #45 . View button submits changes instead. Fixes #45 . Sigmas hide. Fixes #46 .

--- a/app/views/layouts/_view_button.html.erb
+++ b/app/views/layouts/_view_button.html.erb
@@ -1,1 +1,1 @@
-<%= link_to(set_view_path(character.id), remote: true) do %><div class="edit-value">View</div><% end %>
+<%= link_to(set_view_path(character.id), onclick: "$('#character-submit').click();", remote: true) do %><div class="edit-value">View</div><% end %>
