--- a/app/views/characters/_edit_character_info.html.erb
+++ b/app/views/characters/_edit_character_info.html.erb
@@ -31,7 +31,7 @@
                 <span id="random-button" onclick="assignRandomByDice(false);">Roll the Dice</span>
             </td>
         </tr>
-        <span id="sigmas" style="<%= character.unique == true ? "display: none" : "" %>" >
+        <tr id="sigmas" style="<%= character.unique == true ? "display: none" : "" %>" >
             <th class="row_labels">σ:</th> 
             <td><%= f.number_field(:health_sigma, step: 1, class:"abilities_field") %></td>
             <td><%= f.number_field(:strength_sigma, step: 1, class:"abilities_field") %></td>
@@ -43,10 +43,11 @@
                 <%= f.number_field(:charisma_sigma, step: 1, class:"abilities_field") %><br>
             </td>
             <td></td>
-        </span>
+        
+        </tr>
     </div>
     </table>
     <%= f.label "Unique?" %>
     <%= f.check_box :unique, onclick:"toggleElements('#sigmas');" %> <br>
-    <%= f.submit("Submit Changes") %>
+    <%= f.submit("Submit Changes", id:"character-submit") %>
 <% end %>
